@@ -26,6 +26,7 @@
 #include <sched_policies/fifo_queues.h>
 #include <common/fxt.h>
 #include <core/topology.h>
+#include <limits.h>
 /*
 static int is_sorted_task_list(struct starpu_task * task)
 {
